[gd_scene load_steps=4 format=3 uid="uid://bqforxr68kf82"]

[ext_resource type="Texture2D" uid="uid://c0q0enwkt8gvo" path="res://Assets/Background/Brown.png" id="1_4vd3j"]
[ext_resource type="Script" path="res://main_menu.gd" id="1_deu3e"]
[ext_resource type="Texture2D" uid="uid://ck6aexre31dgx" path="res://Assets/Logo/Muddy Rage.png" id="2_updbu"]

[node name="MainMenu" type="Node"]
script = ExtResource("1_deu3e")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1150.0
offset_bottom = 646.0
texture = ExtResource("1_4vd3j")
stretch_mode = 1

[node name="Logo" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.475
anchor_right = 0.5
anchor_bottom = 0.475
offset_left = -420.0
offset_top = -171.8
offset_right = 429.0
offset_bottom = 38.2
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_updbu")

[node name="Button" type="Button" parent="."]
y_sort_enabled = true
anchors_preset = -1
anchor_left = 0.421
anchor_top = 0.691
anchor_right = 0.421
anchor_bottom = 0.691
offset_left = -9.99203
offset_top = -123.768
offset_right = 229.008
offset_bottom = -25.768
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../Button3")
focus_neighbor_bottom = NodePath("../Button2")
focus_next = NodePath("../Button2")
focus_previous = NodePath("../Button3")
theme_override_font_sizes/font_size = 32
text = "LEVEL 1"

[node name="Button2" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.421
anchor_top = 0.691
anchor_right = 0.421
anchor_bottom = 0.691
offset_left = -8.99203
offset_top = -19.768
offset_right = 230.008
offset_bottom = 78.232
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../Button")
focus_neighbor_bottom = NodePath("../Button3")
theme_override_font_sizes/font_size = 32
text = "LEVEL 2"

[node name="Button3" type="Button" parent="."]
offset_left = 474.0
offset_top = 532.0
offset_right = 714.0
offset_bottom = 620.0
focus_neighbor_top = NodePath("../Button2")
focus_neighbor_bottom = NodePath("../Button")
focus_next = NodePath("../Button")
text = "MELISSA SECRET LEVEL"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="focus_entered" from="Button" to="." method="_on_button_focus_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="focus_entered" from="Button2" to="." method="_on_button_2_focus_entered"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="focus_entered" from="Button3" to="." method="_on_button_3_focus_entered"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
